tests/error/pointer_to_tuple_decomposition.bz
function main()
{
	let t = [int32]();
	let *[_] = &t;
}
